# jli

./: .editorconfig  .env  .env.example  .gitignore  Cargo.toml  README.md  bun.lockb  index.ts  package-lock.json  package.json
.github/: dependabot.yml
db/: readme.txt  sites.db  sites.db-shm  sites.db-wal
js/: script.js
migrations/: 20241002235827_create_sites_table.up.sql
public/: index.html  robots.txt  script.js  sitemap.xml
public/404/: compression.html  index.html
public/common/: media.css  style.css
src/: lib.rs  main.rs  utils.rs
src/utils/: api.rs  config.rs  database.rs  id.rs  ip.rs  json.rs  url.rs
