[package]
name = "jli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate", "macros"]}
reqwest = { version = "0.12.8", features = ["blocking"] }
sqlx-cli = { version = "0.8.2", default-features = false, features = ["sqlite"] }

actix-web = "4.9.0"
actix-files = "0.6.6"

serde_json = "1.0"
envy = "0.4.2"
dotenv = "0.15.0"
regex = "1.11.0"
rand = "0.8.5"
