[package]
name = "jli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["sqlite", "migrate", "macros"]}
sqlx-cli = { version = "0.8.2", default-features = false, features = ["sqlite"] }

actix-web = "4.9.0"
actix-files = "0.6.6"

serde_json = "1.0.132"
envy = "0.4.2"
dotenv = "0.15.0"
regex = "1.11.1"
rand = "0.8.5"
url = "2.5.3"
